<resources>
    <string name="app_name">HotelAdvisor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel">Отель</string>
    <string name="move_to_room_choosing">К выбору номера</string>
    <string name="reservation">Бронирование</string>
    <string name="fly_from">Вылет из</string>
    <string name="country">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="count_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="info_about_client">Информация о покупателе</string>
    <string name="info_for_client">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="super_btn">Супер!</string>
    <string name="about_hotel">Об отеле</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="about_the_room">Подробнее о номере</string>
</resources>