<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.reservation.ReservationFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:gravity="center"
                style="@style/Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/ForRating"
            android:textSize="16sp"
            android:id="@+id/rating"
            android:text="5 превосходно"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_on_primary"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:text="Hotel Name"
            style="@style/HotelOrRoomName"
            android:id="@+id/hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:text="Egypt"
            android:id="@+id/address"
            style="@style/ForAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fly_from"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/country"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dates"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/count_of_nights"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/count_of_nights"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/hotel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/hotel"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/Hints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/room" />

            <TextView
                android:id="@+id/room"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_weight="3"
                style="@style/Hints"
                android:text="@string/food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/food"
                android:layout_weight="4"
                style="@style/ForDescriptions"
                android:text="@string/fly_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            style="@style/HotelOrRoomName"
            android:text="@string/info_about_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"/>
        <TextView
            style="@style/ForHintInInfoAboutClient"
            android:text="@string/info_for_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <!--        добавить клиентов и рассчет суммы-->
        <Button
            style="@style/ForButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Оплатить"/>


    </LinearLayout>

</ScrollView>